# aiogram-docker-multi-container

./: .gitignore  Dockerfile  README.md  README_ru.md  main.py  pyproject.toml  requirements.txt  run_bots.py  run_bots.sh  stop_bots.py
